--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
    .classname ->calling styles via class */
 
 body{
-    background-image: url(https://i.pinimg.com/originals/af/8d/63/af8d63a477078732b79ff9d9fc60873f.jpg);
+    background-image: url(Your Image);
 }
 
 .container{
